--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
         <div class="title">Inquiry into Radioactivity - Atom Builder</div>
       </div>
+      <div style="margin-top: 20px; font-family: sans-serif;">
+		    <br/>
+        <h3>Controls</h3>
+		    <br/>
+        <ul>
+          <li>WASD or Arrow Keys - Move your Atom (Test World Only)</li>
+        </ul>
+	    </div>
     </div>
   </body>
 </html>
